--- a/index.html
+++ b/index.html
@@ -46,41 +46,39 @@
 			<!-- /.nav-collapse -->
 		</div>
 	</nav>
-
-	<div class="container" id="bands">
-		<ul class="pagination-lg pagination">
-			<li><a href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a>
+	<div class="container">
+		<img src="./img/banner.png" class="img-responsive">
+	</div>
+<!--	<div class="container" id="bands">
+		<ul class=" pagination">
+			<li><a href="#band1"><img src="./img/band_pic/handsome_ni.jpg" height="60" width="60" class="img-circle"></a>
 			</li>
-			<li><a href="#band1">1</a>
+			<li><a href="#band2"><img src="http://placehold.it/200x200&text=Band 2" height="60" width="60" class="img-circle"></a>
 			</li>
-			<li><a href="#band2">2</a>
+			<li><a href="#band3"><img src="./img/band_pic/hello_world.jpg" height="60" width="60" class="img-circle"></a>
 			</li>
-			<li><a href="#band3">3</a>
+			<li><a href="#band4"><img src="./img/band_pic/csie_multi_gen.jpg" height="60" width="60" class="img-circle"></a>
 			</li>
-			<li><a href="#band4">4</a>
+			<li><a href="#band5"><img src="./img/band_pic/ds_wake_ee.jpg" height="60" width="60" class="img-circle"></a>
 			</li>
-			<li><a href="#band5">5</a>
+			<li><a href="#band6"><img src="./img/band_pic/cross_road.jpg" height="60" width="60" class="img-circle"></a>
 			</li>
-			<li><a href="#band6">6</a>
+			<li><a href="#band7"><img src="http://placehold.it/200x200&text=Band 7" height="60" width="60" class="img-circle"></a>
 			</li>
-			<li><a href="#band7">7</a>
+			<li><a href="#band8"><img src="./img/band_pic/snow_white.jpg" height="60" width="60" class="img-circle"></a>
 			</li>
-			<li><a href="#band8">8</a>
+			<li><a href="#band9"><img src="./img/band_pic/reunion.jpg" height="60" width="60" class="img-circle"></a>
 			</li>
-			<li><a href="#band9">9</a>
+			<li><a href="#band10"><img src="./img/band_pic/pa_bro.jpg" height="60" width="60" class="img-circle"></a>
 			</li>
-			<li><a href="#band10">10</a>
+			<li><a href="#band11"><img src="./img/band_pic/little_bee.jpg" height="60" width="60" class="img-circle"></a>
 			</li>
-			<li><a href="#band11">11</a>
+			<li><a href="#band12"><img src="./img/band_pic/the_ins.jpg" height="60" width="60" class="img-circle"></a>
 			</li>
-			<li><a href="#band12">12</a>
-			</li>
-			<li><a href="#band13">13</a>
-			</li>
-			<li><a href="#"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a>
+			<li><a href="#band13"><img src="./img/band_pic/football_love.jpg" height="60" width="60" class="img-circle"></a>
 			</li>
 		</ul>
-	</div>
+	</div>-->
 
 	<div class="container" id="about">
 		<div class="well" id="band1">
@@ -510,8 +508,8 @@
 					<br> Hooligan 黃柏豪 Goalkeeper 黃致皓 Journeyman 康偉理 Rainmaker 章尚群
 					<br>
 					<a href="https://www.facebook.com/footballloveofficial" target="_blank">
-			  https://www.facebook.com/footballloveofficial
-			</a>
+						https://www.facebook.com/footballloveofficial
+					</a>
 					<br>
 				</p>
 				<hr>
