--- a/index.html
+++ b/index.html
@@ -34,9 +34,38 @@
 				<ul class="nav navbar-nav pull-right">
 					<li><a href="#about">活動介紹</a>
 					</li>
-					<li><a href="#bands">樂團列表</a>
-					</li>
 					<li><a href="#agenda">節目單</a>
+					</li>
+					<li class="dropdown ">
+						<a href="#bands" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">樂團列表 <span class="caret"></span></a>
+						<ul class="dropdown-menu dropdown-menu-right">
+							<li><a href="#band1"><img src="./img/band_pic/handsome_ni.jpg" height="42" width="42" class="img-circle"> 英俊泥</a>
+							</li>
+							<li><a href="#band2"><img src="http://placehold.it/200x200&text=Band 2" height="42" width="42" class="img-circle"> 別讓泮池不開心</a>
+							</li>
+							<li><a href="#band3"><img src="./img/band_pic/hello_world.jpg" height="42" width="42" class="img-circle"> Hello, World!</a>
+							</li>
+							<li><a href="#band4"><img src="./img/band_pic/csie_multi_gen.jpg" height="42" width="42" class="img-circle"> 資工跨屆團</a>
+							</li>
+							<li><a href="#band5"><img src="./img/band_pic/ds_wake_ee.jpg" height="42" width="42" class="img-circle"> 資結●夢醒十分</a>
+							</li>
+							<li><a href="#band6"><img src="./img/band_pic/cross_road.jpg" height="42" width="42" class="img-circle"> 在十字路口遇見奐晴</a>
+							</li>
+							<li><a href="#band7"><img src="http://placehold.it/200x200&text=Band 7" height="42" width="42" class="img-circle"> 伊妍喃噤</a>
+							</li>
+							<li><a href="#band8"><img src="./img/band_pic/snow_white.jpg" height="42" width="42" class="img-circle"> 白雪公主與七矮人</a>
+							</li>
+							<li><a href="#band9"><img src="./img/band_pic/reunion.jpg" height="42" width="42" class="img-circle"> Reunion</a>
+							</li>
+							<li><a href="#band10"><img src="./img/band_pic/pa_bro.jpg" height="42" width="42" class="img-circle"> PA大哥</a>
+							</li>
+							<li><a href="#band11"><img src="./img/band_pic/little_bee.jpg" height="42" width="42" class="img-circle"> Little Bee</a>
+							</li>
+							<li><a href="#band12"><img src="./img/band_pic/the_ins.jpg" height="42" width="42" class="img-circle"> The Ins.</a>
+							</li>
+							<li><a href="#band13"><img src="./img/band_pic/football_love.jpg" height="42" width="42" class="img-circle"> Football Love</a>
+							</li>
+						</ul>
 					</li>
 					<!-- 
 		<li><a href="#">投票區</a></li>
@@ -49,36 +78,7 @@
 	<div class="container">
 		<img src="./img/banner.png" class="img-responsive">
 	</div>
-<!--	<div class="container" id="bands">
-		<ul class=" pagination">
-			<li><a href="#band1"><img src="./img/band_pic/handsome_ni.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band2"><img src="http://placehold.it/200x200&text=Band 2" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band3"><img src="./img/band_pic/hello_world.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band4"><img src="./img/band_pic/csie_multi_gen.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band5"><img src="./img/band_pic/ds_wake_ee.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band6"><img src="./img/band_pic/cross_road.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band7"><img src="http://placehold.it/200x200&text=Band 7" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band8"><img src="./img/band_pic/snow_white.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band9"><img src="./img/band_pic/reunion.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band10"><img src="./img/band_pic/pa_bro.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band11"><img src="./img/band_pic/little_bee.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band12"><img src="./img/band_pic/the_ins.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band13"><img src="./img/band_pic/football_love.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-		</ul>
-	</div>-->
+	
 
 	<div class="container" id="about">
 		<div class="well" id="band1">
@@ -436,7 +436,7 @@
 			<div class="col-md-3"><img src="./img/band_pic/little_bee.jpg" class="img-responsive img-rounded">
 			</div>
 			<div class="col-md-9">
-				<h3>小蜜蜂</h3>
+				<h3>Little Bee</h3>
 				<ul>
 					<li>電機三：張瑞智 </li>
 					<li>資工二：呂明臻</li>
@@ -525,7 +525,7 @@
 		</div>
 
 		<div class="container-fluid" id="voting-arena">
-			<iframe class="embed-responsive-item" width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/14YepbyheWTZTKtr7uXiePPuJe0d1EjcdIP78tj2Hq2Y/pubchart?oid=1472798053&amp;format=interactive"></iframe>
+			<iframe class="embed-responsive-item" width="420" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/14YepbyheWTZTKtr7uXiePPuJe0d1EjcdIP78tj2Hq2Y/pubchart?oid=1472798053&amp;format=interactive"></iframe>
 
 			<a href="http://goo.gl/forms/InI17csSIo" target="_blank">點我投票</a>
 		</div>
