test mobile viewport

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>2014電資野臺</title>
+	<title>NEW BORN - 2014電資野臺</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<!-- Optional theme -->
@@ -47,14 +47,14 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">2014電資野台</a>
+				<a class="navbar-brand" href="#">NEW BORN 2014電資野台</a>
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li><a href="#about">活動介紹</a>
-					</li>
-					<li><a href="#agenda">節目單</a>
-					</li>
+					<!--<li><a href="#about">活動介紹</a>
+                                        </li>
+                                        <li><a href="#agenda">節目單</a>
+                                        </li>-->
 					<li class="dropdown ">
 						<a href="#bands" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">樂團列表 <span class="caret"></span></a>
 						<ul class="dropdown-menu dropdown-menu-right">
@@ -95,9 +95,42 @@
 		</div>
 	</nav>
 	<img src="./img/banner.png" class="img-responsive" style="display: block;margin-left: auto;margin-right: auto;">
-<!--	<div class="container" id="bands">
-		<ul class=" pagination">
-			<li><a href="#band1"><img src="./img/band_pic/handsome_ni.jpg" height="60" width="60" class="img-circle"></a>
+	
+	<div class="container" id="agenda" style="">
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band1"><img src="./img/band_pic/handsome_ni.jpg" height="60" width="60" class="img-circle"></a> 英俊泥 <small style="color: #ffffff">feat. 電機二：張聖農 電機二：游理聿 土木二：張家睿 機械二：胡哲儒 土木三：陳正澔 牙醫二：高開元</small></h3>
+                                                        <hr>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band2"><img src="http://placehold.it/200x200&text=Band 2" height="60" width="60" class="img-circle"></a> 別讓泮池不開心</h3>
+                                                        <hr>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band3"><img src="./img/band_pic/hello_world.jpg" height="60" width="60" class="img-circle"></a> Hello, World!</h3>
+                                                        <hr>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band4"><img src="./img/band_pic/csie_multi_gen.jpg" height="60" width="60" class="img-circle"></a> 資工跨屆團</h3>
+                                                        <hr>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band5"><img src="./img/band_pic/ds_wake_ee.jpg" height="60" width="60" class="img-circle"></a> 資結●夢醒十分</h3>
+                                                        <hr>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band6"><img src="./img/band_pic/cross_road.jpg" height="60" width="60" class="img-circle"></a> 在十字路口遇見奐晴</h3>
+                                                        <hr>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band7"><img src="http://placehold.it/200x200&text=Band 7" height="60" width="60" class="img-circle"></a> 伊妍喃噤</h3>
+                                                        <hr>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band8"><img src="./img/band_pic/snow_white.jpg" height="60" width="60" class="img-circle"></a> 白雪公主與七矮人</h3>
+                                                        <hr>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band9"><img src="./img/band_pic/reunion.jpg" height="60" width="60" class="img-circle"></a> Reunion</h3>
+                                                        <hr>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band10"><img src="./img/band_pic/pa_bro.jpg" height="60" width="60" class="img-circle"></a> PA大哥</h3>
+                                                        <hr>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band11"><img src="./img/band_pic/little_bee.jpg" height="60" width="60" class="img-circle"></a> Little Bee</h3>
+                                                        <hr>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band12"><img src="./img/band_pic/the_ins.jpg" height="60" width="60" class="img-circle"></a> The Ins.</h3>
+                                                        <hr>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band13"><img src="./img/band_pic/football_love.jpg" height="60" width="60" class="img-circle"></a> Football Love</h3>
+                                                        <hr>
+	</div>
+	<!--<div class="container" id="bands">
+		<ul class="media-list">
+			<li class="media">
+                          <a class="media-left media-middle" href="#band1"><img src="./img/band_pic/handsome_ni.jpg" height="60" width="60" class="img-circle"></a>
+                          <div class="media-body">
+                            <h2 class="media-heading">英俊泥</h4>
+                          </div>
 			</li>
 			<li><a href="#band2"><img src="http://placehold.it/200x200&text=Band 2" height="60" width="60" class="img-circle"></a>
 			</li>
@@ -124,9 +157,10 @@
 			<li><a href="#band13"><img src="./img/band_pic/football_love.jpg" height="60" width="60" class="img-circle"></a>
 			</li>
 		</ul>
-	</div>-->
+	</div>--->
 
 	<div class="container" id="about">
+                <h2>樂團介紹</h2>
 		<div class="well" id="band1">
                     <div class="row">
 			<div class="col-md-3"><img src="./img/band_pic/handsome_ni.jpg" class="img-responsive img-rounded">
@@ -581,9 +615,7 @@
 			</div>
                     </div>
 		</div>
-		<div class="container-fluid" id="agenda">
-		</div>
-
+		
 		<div class="container-fluid" id="voting-arena">
 			<iframe class="embed-responsive-item" width="643" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/14YepbyheWTZTKtr7uXiePPuJe0d1EjcdIP78tj2Hq2Y/pubchart?oid=1472798053&amp;format=interactive"></iframe>
 			<a href="http://goo.gl/forms/InI17csSIo" target="_blank">點我投票</a>
