--- a/index.html
+++ b/index.html
@@ -97,31 +97,31 @@
 	<img src="./img/banner.png" class="img-responsive" style="display: block;margin-left: auto;margin-right: auto;">
 	
 	<div class="container" id="agenda" style="">
-                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band1"><img src="./img/band_pic/handsome_ni.jpg" height="60" width="60" class="img-circle"></a> 英俊泥 <small style="color: #ffffff">feat. 電機二：張聖農 電機二：游理聿 土木二：張家睿 機械二：胡哲儒 土木三：陳正澔 牙醫二：高開元</small></h3>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band1"><img src="./img/band_pic/handsome_ni.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">英俊泥</span> <small>feat. 電機二：張聖農 電機二：游理聿 土木二：張家睿 機械二：胡哲儒 土木三：陳正澔 牙醫二：高開元</small></h3>
                                                         <hr>
-                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band2"><img src="http://placehold.it/200x200&text=Band 2" height="60" width="60" class="img-circle"></a> 別讓泮池不開心</h3>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band2"><img src="http://placehold.it/200x200&text=Band 2" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">別讓泮池不開心</span> <small>feat. 資工二：謝其良 資工一：張以白 生科ㄧ：蔡旻昱 師大物理ㄧ：劉彥成 化學二：卓冠甫</small></h3>
                                                         <hr>
-                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band3"><img src="./img/band_pic/hello_world.jpg" height="60" width="60" class="img-circle"></a> Hello, World!</h3>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band3"><img src="./img/band_pic/hello_world.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">Hello, World!</span> <small>feat. 電機一：許秉鈞 電機一：汪子茗 電機一：陳秉鴻 電機一：陳元昊 電機一：童寬 電機一：徐一真 電機一：張顥霆</small></h3>
                                                         <hr>
-                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band4"><img src="./img/band_pic/csie_multi_gen.jpg" height="60" width="60" class="img-circle"></a> 資工跨屆團</h3>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band4"><img src="./img/band_pic/csie_multi_gen.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">資工跨屆團</span> <small>feat. 資工教授：林軒田 資工ㄧ：張以白 資工二：林祐廷 資工二：陳思憫 資工二：呂明臻 資工二：王浩恩</small></h3>
                                                         <hr>
-                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band5"><img src="./img/band_pic/ds_wake_ee.jpg" height="60" width="60" class="img-circle"></a> 資結●夢醒十分</h3>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band5"><img src="./img/band_pic/ds_wake_ee.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">資結●夢醒十分</span> <small>feat. 教授：Ric 黃鐘揚 助教：Ｍike Wang 電機一：李育嘉 電機一：童寬 電機三：黃士弘 電機二：董皓文 電機二：侯信宇</small></h3>
                                                         <hr>
-                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band6"><img src="./img/band_pic/cross_road.jpg" height="60" width="60" class="img-circle"></a> 在十字路口遇見奐晴</h3>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band6"><img src="./img/band_pic/cross_road.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">在十字路口遇見奐晴</span> <small>feat. 電機二：陳奐晴 電機三：黃學亞 財金三：賴宜聲 農化所：楊弘宇 化工四：蔡煒宣 政大法律：李承晏</small></h3>
                                                         <hr>
-                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band7"><img src="http://placehold.it/200x200&text=Band 7" height="60" width="60" class="img-circle"></a> 伊妍喃噤</h3>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band7"><img src="http://placehold.it/200x200&text=Band 7" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">伊妍喃噤</span> <small>feat. 電機四：唐寬 電機四：林建甫 電機四：謝伊妍 電機四：張達智 電機四：吳京達 經濟二：林谷炘</small></h3>
                                                         <hr>
-                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band8"><img src="./img/band_pic/snow_white.jpg" height="60" width="60" class="img-circle"></a> 白雪公主與七矮人</h3>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band8"><img src="./img/band_pic/snow_white.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">白雪公主與七矮人</span> <small>feat. 心理碩二：林楷潔 電機一：張洁瑞 機械一：熊家和 電機一：曾威程 電機一：李育嘉 電機一：郭彥滕 生機一：周至恩 政治一：黃啟祐 電機一：汪子茗</small></h3>
                                                         <hr>
-                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band9"><img src="./img/band_pic/reunion.jpg" height="60" width="60" class="img-circle"></a> Reunion</h3>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band9"><img src="./img/band_pic/reunion.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">Reunion</span> <small>feat. 資工二：王浩恩 資工二：林家緯 中正通訊：許銘宸 政大會計：蘇彥誠</small></h3>
                                                         <hr>
-                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band10"><img src="./img/band_pic/pa_bro.jpg" height="60" width="60" class="img-circle"></a> PA大哥</h3>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band10"><img src="./img/band_pic/pa_bro.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">PA大哥</span> <small>feat. 電機三：李驊恩 電機三：李凱皇 電機三：許遠哲 電機三：李威德 化工三：張兆文 獸醫二：Mario 聖約翰科大醫護資訊一：吳學穎</small></h3>
                                                         <hr>
-                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band11"><img src="./img/band_pic/little_bee.jpg" height="60" width="60" class="img-circle"></a> Little Bee</h3>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band11"><img src="./img/band_pic/little_bee.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">Little Bee</span> <small>feat. 電機三：張瑞智 資工二：呂明臻 生機三：杜竣擇 電機碩二：林廉喬 電機碩一：許證捷 電信碩一：潘善斌</small></h3>
                                                         <hr>
-                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band12"><img src="./img/band_pic/the_ins.jpg" height="60" width="60" class="img-circle"></a> The Ins.</h3>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band12"><img src="./img/band_pic/the_ins.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">The Ins.</span> <small>feat. 資工二：陳映紅 資工二：楊喬宇 資工二：陳思憫 資工二：郭傳駿 資工二：陳璽安</small></h3>
                                                         <hr>
-                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;"><a href="#band13"><img src="./img/band_pic/football_love.jpg" height="60" width="60" class="img-circle"></a> Football Love</h3>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band13"><img src="./img/band_pic/football_love.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">Football Love</span> <small>feat. 電機四：黃致皓 電機四：簡上博 光電碩二：黃柏豪 文化大學傳播四：章尚群 台北大學財金三：康偉理</small></h3>
                                                         <hr>
 	</div>
 	<!--<div class="container" id="bands">
@@ -618,7 +618,7 @@
 		
 		<div class="container-fluid" id="voting-arena">
 			<iframe class="embed-responsive-item" width="643" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/14YepbyheWTZTKtr7uXiePPuJe0d1EjcdIP78tj2Hq2Y/pubchart?oid=1472798053&amp;format=interactive"></iframe>
-			<a href="http://goo.gl/forms/InI17csSIo" target="_blank">點我投票</a>
+			<a class="btn btn-link"href="http://goo.gl/forms/InI17csSIo" target="_blank">點我投票</a>
 		</div>
 		<!--let the belows be below-->
 		<div class="container-fluid" id="">
