--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>NEW BORN - 2014電資野臺</title>
+	<title>NEW BORN - 2014 電資野臺</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<!-- Optional theme -->
@@ -47,7 +47,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">NEW BORN 2014電資野台</a>
+				<a class="navbar-brand" href="#">NEW BORN 2014 電資野台</a>
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav pull-right">
@@ -96,7 +96,7 @@
 	</nav>
 	<img src="./img/banner.png" class="img-responsive" style="display: block;margin-left: auto;margin-right: auto;">
 	
-	<div class="container" id="agenda" style="">
+	<div class="container" id="agenda">
                                                         <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band1"><img src="./img/band_pic/handsome_ni.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">英俊泥</span> <small>feat. 電機二：張聖農 電機二：游理聿 土木二：張家睿 機械二：胡哲儒 土木三：陳正澔 牙醫二：高開元</small></h3>
                                                         <hr>
                                                         <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band2"><img src="http://placehold.it/200x200&text=Band 2" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">別讓泮池不開心</span> <small>feat. 資工二：謝其良 資工一：張以白 生科ㄧ：蔡旻昱 師大物理ㄧ：劉彥成 化學二：卓冠甫</small></h3>
