change various css colors

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                         </li>
                                         <li><a href="#agenda">節目單</a>
                                         </li>-->
-					<li class="dropdown ">
+					<li class="dropdown">
 						<a href="#bands" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">樂團列表 <span class="caret"></span></a>
 						<ul class="dropdown-menu dropdown-menu-right">
 							<li><a href="#band1"><img src="./img/band_pic/handsome_ni.jpg" height="42" width="42" class="img-circle"> 英俊泥</a>
@@ -86,17 +86,18 @@
 							</li>
 						</ul>
 					</li>
-					<!-- 
-		<li><a href="#">投票區</a></li>
-		-->
 				</ul>
 			</div>
 			<!-- /.nav-collapse -->
 		</div>
 	</nav>
-	<img src="./img/banner.png" class="img-responsive" style="display: block;margin-left: auto;margin-right: auto;">
+	<div class="container-fluid">
+          <img src="./img/banner.png" class="img-responsive" style="display: block;margin-left: auto;margin-right: auto;">
+        </div>
 	
 	<div class="container" id="agenda">
+         
+          <h1>Bands</h1>
                                                         <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band1"><img src="./img/band_pic/handsome_ni.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">英俊泥</span> <small>feat. 電機二：張聖農 電機二：游理聿 土木二：張家睿 機械二：胡哲儒 土木三：陳正澔 牙醫二：高開元</small></h3>
                                                         <hr>
                                                         <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band2"><img src="http://placehold.it/200x200&text=Band 2" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">別讓泮池不開心</span> <small>feat. 資工二：謝其良 資工一：張以白 生科ㄧ：蔡旻昱 師大物理ㄧ：劉彥成 化學二：卓冠甫</small></h3>
@@ -160,7 +161,7 @@
 	</div>--->
 
 	<div class="container" id="about">
-                <h2>樂團介紹</h2>
+                <h1>樂團介紹</h1>
 		<div class="well" id="band1">
                     <div class="row">
 			<div class="col-md-3"><img src="./img/band_pic/handsome_ni.jpg" class="img-responsive img-rounded">
