--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<ul class="dropdown-menu dropdown-menu-right">
 							<li><a href="#band1"><img src="./img/band_pic/handsome_ni.jpg" height="42" width="42" class="img-circle"> 英俊泥</a>
 							</li>
-							<li><a href="#band2"><img src="http://placehold.it/200x200&text=Band 2" height="42" width="42" class="img-circle"> 別讓泮池不開心</a>
+							<li><a href="#band2"><img src="./img/band_pic/do_not_disappoint_panchi.jpg" height="42" width="42" class="img-circle"> 別讓泮池不開心</a>
 							</li>
 							<li><a href="#band3"><img src="./img/band_pic/hello_world.jpg" height="42" width="42" class="img-circle"> Hello, World!</a>
 							</li>
@@ -70,13 +70,13 @@
 							</li>
 							<li><a href="#band6"><img src="./img/band_pic/cross_road.jpg" height="42" width="42" class="img-circle"> 在十字路口遇見奐晴</a>
 							</li>
-							<li><a href="#band7"><img src="http://placehold.it/200x200&text=Band 7" height="42" width="42" class="img-circle"> 伊妍喃噤</a>
+							<li><a href="#band7"><img src="./img/band_pic/pa_bro.jpg" height="42" width="42" class="img-circle"> PA大哥</a>
 							</li>
 							<li><a href="#band8"><img src="./img/band_pic/snow_white.jpg" height="42" width="42" class="img-circle"> 白雪公主與七矮人</a>
 							</li>
 							<li><a href="#band9"><img src="./img/band_pic/reunion.jpg" height="42" width="42" class="img-circle"> Reunion</a>
 							</li>
-							<li><a href="#band10"><img src="./img/band_pic/pa_bro.jpg" height="42" width="42" class="img-circle"> PA大哥</a>
+							<li><a href="#band10"><img src="./img/band_pic/cannot_express_in_simple_words.jpg" height="42" width="42" class="img-circle"> 伊妍喃噤</a>
 							</li>
 							<li><a href="#band11"><img src="./img/band_pic/little_bee.jpg" height="42" width="42" class="img-circle"> Little Bee</a>
 							</li>
@@ -100,7 +100,7 @@
           <h1>Bands</h1>
                                                         <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band1"><img src="./img/band_pic/handsome_ni.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">英俊泥</span> <small>feat. 電機二：張聖農 電機二：游理聿 土木二：張家睿 機械二：胡哲儒 土木三：陳正澔 牙醫二：高開元</small></h3>
                                                         <hr>
-                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band2"><img src="http://placehold.it/200x200&text=Band 2" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">別讓泮池不開心</span> <small>feat. 資工二：謝其良 資工一：張以白 生科ㄧ：蔡旻昱 師大物理ㄧ：劉彥成 化學二：卓冠甫</small></h3>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band2"><img src="./img/band_pic/do_not_disappoint_panchi.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">別讓泮池不開心</span> <small>feat. 資工二：謝其良 資工一：張以白 生科ㄧ：蔡旻昱 師大物理ㄧ：劉彥成 化學二：卓冠甫</small></h3>
                                                         <hr>
                                                         <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band3"><img src="./img/band_pic/hello_world.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">Hello, World!</span> <small>feat. 電機一：許秉鈞 電機一：汪子茗 電機一：陳秉鴻 電機一：陳元昊 電機一：童寬 電機一：徐一真 電機一：張顥霆</small></h3>
                                                         <hr>
@@ -110,13 +110,13 @@
                                                         <hr>
                                                         <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band6"><img src="./img/band_pic/cross_road.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">在十字路口遇見奐晴</span> <small>feat. 電機二：陳奐晴 電機三：黃學亞 財金三：賴宜聲 農化所：楊弘宇 化工四：蔡煒宣 政大法律：李承晏</small></h3>
                                                         <hr>
-                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band7"><img src="http://placehold.it/200x200&text=Band 7" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">伊妍喃噤</span> <small>feat. 電機四：唐寬 電機四：林建甫 電機四：謝伊妍 電機四：張達智 電機四：吳京達 經濟二：林谷炘</small></h3>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band7"><img src="./img/band_pic/pa_bro.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">PA大哥</span> <small>feat. 電機三：李驊恩 電機三：李凱皇 電機三：許遠哲 電機三：李威德 化工三：張兆文 獸醫二：Mario 聖約翰科大醫護資訊一：吳學穎</small></h3>
                                                         <hr>
                                                         <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band8"><img src="./img/band_pic/snow_white.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">白雪公主與七矮人</span> <small>feat. 心理碩二：林楷潔 電機一：張洁瑞 機械一：熊家和 電機一：曾威程 電機一：李育嘉 電機一：郭彥滕 生機一：周至恩 政治一：黃啟祐 電機一：汪子茗</small></h3>
                                                         <hr>
                                                         <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band9"><img src="./img/band_pic/reunion.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">Reunion</span> <small>feat. 資工二：王浩恩 資工二：林家緯 中正通訊：許銘宸 政大會計：蘇彥誠</small></h3>
                                                         <hr>
-                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band10"><img src="./img/band_pic/pa_bro.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">PA大哥</span> <small>feat. 電機三：李驊恩 電機三：李凱皇 電機三：許遠哲 電機三：李威德 化工三：張兆文 獸醫二：Mario 聖約翰科大醫護資訊一：吳學穎</small></h3>
+                                                        <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band10"><img src="./img/band_pic/cannot_express_in_simple_words.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">伊妍喃噤</span> <small>feat. 電機四：唐寬 電機四：林建甫 電機四：謝伊妍 電機四：張達智 電機四：吳京達 經濟二：林谷炘</small></h3>
                                                         <hr>
                                                         <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band11"><img src="./img/band_pic/little_bee.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">Little Bee</span> <small>feat. 電機三：張瑞智 資工二：呂明臻 生機三：杜竣擇 電機碩二：林廉喬 電機碩一：許證捷 電信碩一：潘善斌</small></h3>
                                                         <hr>
@@ -125,40 +125,6 @@
                                                         <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band13"><img src="./img/band_pic/football_love.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">Football Love</span> <small>feat. 電機四：黃致皓 電機四：簡上博 光電碩二：黃柏豪 文化大學傳播四：章尚群 台北大學財金三：康偉理</small></h3>
                                                         <hr>
 	</div>
-	<!--<div class="container" id="bands">
-		<ul class="media-list">
-			<li class="media">
-                          <a class="media-left media-middle" href="#band1"><img src="./img/band_pic/handsome_ni.jpg" height="60" width="60" class="img-circle"></a>
-                          <div class="media-body">
-                            <h2 class="media-heading">英俊泥</h4>
-                          </div>
-			</li>
-			<li><a href="#band2"><img src="http://placehold.it/200x200&text=Band 2" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band3"><img src="./img/band_pic/hello_world.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band4"><img src="./img/band_pic/csie_multi_gen.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band5"><img src="./img/band_pic/ds_wake_ee.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band6"><img src="./img/band_pic/cross_road.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band7"><img src="http://placehold.it/200x200&text=Band 7" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band8"><img src="./img/band_pic/snow_white.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band9"><img src="./img/band_pic/reunion.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band10"><img src="./img/band_pic/pa_bro.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band11"><img src="./img/band_pic/little_bee.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band12"><img src="./img/band_pic/the_ins.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-			<li><a href="#band13"><img src="./img/band_pic/football_love.jpg" height="60" width="60" class="img-circle"></a>
-			</li>
-		</ul>
-	</div>--->
 
 	<div class="container" id="about">
                 <h1>樂團介紹</h1>
@@ -199,7 +165,7 @@
 		</div>
 		<div class="well" id="band2">
                     <div class="row">
-			<div class="col-md-3"><img src="http://placehold.it/200x200&text=Band 2" class="img-responsive img-rounded">
+			<div class="col-md-3"><img src="./img/band_pic/do_not_disappoint_panchi.jpg" class="img-responsive img-rounded">
 			</div>
 			<div class="col-md-9">
 				<h3>別讓泮池不開心</h3>
@@ -381,40 +347,38 @@
 			</div>
                     </div>
 		</div>
-		<div class="well" id="band7">
+                <div class="well" id="band7">
                     <div class="row">
-			<div class="col-md-3"><img src="http://placehold.it/200x200&text=Band 7" class="img-responsive img-rounded">
-			</div>
-			<div class="col-md-9">
-				<h3>伊妍喃噤</h3>
-				<ul>
-					<li>電機四：唐寬 </li>
-					<li>電機四：林建甫</li>
-					<li>電機四：謝伊妍</li>
-					<li>電機四：張達智</li>
-					<li>電機四：吳京達</li>
-					<li>經濟二：林谷炘</li>
-				</ul>
-				<h4>樂團介紹</h4>
-				<p>
-					只會唱歌 一言既出一言難盡一元復始的Vocal 謝伊妍
-					<br> 超級掰掰掰掰掰~的Vocal 張達智
-					<br> 無精打采的Bass手 吳京達
-					<br> 節拍器會自己變慢的鼓手 林建甫
-					<br> 豆腐心的吉他手 林谷炘
-					<br> 多功能工具人 木吉他手+KB手+合音 唐寬
-					<br> 團介限100個字只好伊妍喃噤
-					<br>
-				</p>
-				<hr>
-				<ol>
-					<li>HE有激人 - 超級白</li>
-					<li>楊乃文 - 我給的愛 </li>
-					<li>Phil Collins - Easy Lover</li>
-				</ol>
-			</div>
+                        <div class="col-md-3"><img src="./img/band_pic/pa_bro.jpg" class="img-responsive img-rounded">
+                        </div>
+                        <div class="col-md-9">
+                                <h3>PA大哥</h3>
+                                <ul>
+                                        <li>電機三：李驊恩</li>
+                                        <li>電機三：李凱皇</li>
+                                        <li>電機三：許遠哲</li>
+                                        <li>電機三：李威德</li>
+                                        <li>化工三：張兆文</li>
+                                        <li>獸醫二：Mario </li>
+                                        <li>聖約翰科大醫護資訊一：吳學穎</li>
+                                </ul>
+                                <h4> 樂團介紹</h4>
+                                <p>
+                                        ROCKKKKKKKKK!
+                                        <br> 人難免會感到迷惘，無論是對愛情亦或是人生方向‧‧‧
+                                        <br> 但迷網只是浮雲，搖滾才是硬道理!
+                                        <br> 我們是PA大哥!希望能在熱情的夜觸動你的心!
+                                        <br>
+                                        <p>
+                                                <hr>
+                                                <ol>
+                                                        <li>Toto - King of the world</li>
+                                                        <li> 汪峰- 春天裡</li>
+                                                        <li>FTIsland - Black chocolate</li>
+                                                </ol>
+                        </div>
                     </div>
-		</div>
+                </div>
 		<div class="well" id="band8">
                     <div class="row">
 			<div class="col-md-3"><img src="./img/band_pic/snow_white.jpg" class="img-responsive img-rounded">
@@ -492,38 +456,40 @@
 			</div>
                     </div>
 		</div>
-		<div class="well" id="band10">
+                <div class="well" id="band10">
                     <div class="row">
-			<div class="col-md-3"><img src="./img/band_pic/pa_bro.jpg" class="img-responsive img-rounded">
-			</div>
-			<div class="col-md-9">
-				<h3>PA大哥</h3>
-				<ul>
-					<li>電機三：李驊恩</li>
-					<li>電機三：李凱皇</li>
-					<li>電機三：許遠哲</li>
-					<li>電機三：李威德</li>
-					<li>化工三：張兆文</li>
-					<li>獸醫二：Mario </li>
-					<li>聖約翰科大醫護資訊一：吳學穎</li>
-				</ul>
-				<h4> 樂團介紹</h4>
-				<p>
-					ROCKKKKKKKKK!
-					<br> 人難免會感到迷惘，無論是對愛情亦或是人生方向‧‧‧
-					<br> 但迷網只是浮雲，搖滾才是硬道理!
-					<br> 我們是PA大哥!希望能在熱情的夜觸動你的心!
-					<br>
-					<p>
-						<hr>
-						<ol>
-							<li>Toto - King of the world</li>
-							<li> 汪峰- 春天裡</li>
-							<li>FTIsland - Black chocolate</li>
-						</ol>
-			</div>
+                        <div class="col-md-3"><img src="./img/band_pic/cannot_express_in_simple_words.jpg" class="img-responsive img-rounded">
+                        </div>
+                        <div class="col-md-9">
+                                <h3>伊妍喃噤</h3>
+                                <ul>
+                                        <li>電機四：唐寬 </li>
+                                        <li>電機四：林建甫</li>
+                                        <li>電機四：謝伊妍</li>
+                                        <li>電機四：張達智</li>
+                                        <li>電機四：吳京達</li>
+                                        <li>經濟二：林谷炘</li>
+                                </ul>
+                                <h4>樂團介紹</h4>
+                                <p>
+                                        只會唱歌 一言既出一言難盡一元復始的Vocal 謝伊妍
+                                        <br> 超級掰掰掰掰掰~的Vocal 張達智
+                                        <br> 無精打采的Bass手 吳京達
+                                        <br> 節拍器會自己變慢的鼓手 林建甫
+                                        <br> 豆腐心的吉他手 林谷炘
+                                        <br> 多功能工具人 木吉他手+KB手+合音 唐寬
+                                        <br> 團介限100個字只好伊妍喃噤
+                                        <br>
+                                </p>
+                                <hr>
+                                <ol>
+                                        <li>HE有激人 - 超級白</li>
+                                        <li>楊乃文 - 我給的愛 </li>
+                                        <li>Phil Collins - Easy Lover</li>
+                                </ol>
+                        </div>
                     </div>
-		</div>
+                </div>
 		<div class="well" id="band11">
                     <div class="row">
 			<div class="col-md-3"><img src="./img/band_pic/little_bee.jpg" class="img-responsive img-rounded">
@@ -618,8 +584,9 @@
 		</div>
 		
 		<div class="container-fluid" id="voting-arena">
-			<iframe class="embed-responsive-item" width="643" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/14YepbyheWTZTKtr7uXiePPuJe0d1EjcdIP78tj2Hq2Y/pubchart?oid=1472798053&amp;format=interactive"></iframe>
-			<a class="btn btn-link"href="http://goo.gl/forms/InI17csSIo" target="_blank">點我投票</a>
+                        <img class="img-responsive" src="https://docs.google.com/spreadsheets/d/14YepbyheWTZTKtr7uXiePPuJe0d1EjcdIP78tj2Hq2Y/pubchart?oid=1472798053&format=image">
+			<!--<iframe class="embed-responsive-item" width="643" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/14YepbyheWTZTKtr7uXiePPuJe0d1EjcdIP78tj2Hq2Y/pubchart?oid=1472798053&amp;format=interactive"></iframe>-->
+			<a class="btn btn-default" href="http://goo.gl/forms/InI17csSIo" target="_blank">點我投票</a>
 		</div>
 		<!--let the belows be below-->
 		<div class="container-fluid" id="">
