change ol list type

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	
 	<div class="container" id="agenda">
          
-          <h1>Bands</h1>
+          <h1>演出</h1>
                                                         <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band1"><img src="./img/band_pic/handsome_ni.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">英俊泥</span> <small>feat. 電機二：張聖農 電機二：游理聿 土木二：張家睿 機械二：胡哲儒 土木三：陳正澔 牙醫二：高開元</small></h3>
                                                         <hr>
                                                         <h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;color:#777"><a href="#band2"><img src="./img/band_pic/do_not_disappoint_panchi.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">別讓泮池不開心</span> <small>feat. 資工二：謝其良 資工一：張以白 生科ㄧ：蔡旻昱 師大物理ㄧ：劉彥成 化學二：卓冠甫</small></h3>
@@ -153,7 +153,7 @@
 					<br> 我們是英俊泥...
 				</p>
 				<hr>
-				<ol>
+				<ol style="list-style-type: square;">
 					<li> Red Hot Chili Pepper - Goodbye Hooray </li>
 					<li>Jason Mraz - Butterfly </li>
 					<li>John Mayer - Slow Dancing In A Burnig Room </li>
@@ -186,7 +186,7 @@
 					<br> 聽了還想再聽摸了還想再摸 叫了還想再叫還有好喝的啤酒助興～就好好的期待吧12/19 別讓泮池不開心！！！
 				</p>
 				<hr>
-				<ol>
+				<ol style="list-style-type: square;">
 					<li>Angra - Acid Rain</li>
 					<li> Dream Theater - On The Back Of Angels</li>
 					<li>One OK Rock - Clock Strikes</li>
@@ -241,7 +241,7 @@
 					<br> 不修交電，野台篇
 				</p>
 				<hr>
-				<ol>
+				<ol style="list-style-type: square;">
 					<li>Sanata - Summer Lady</li>
 					<li> The Click Five - Mary Jane</li>
 					<li> Guns n' Roses - Don't Cry </li>
@@ -274,7 +274,7 @@
 					<br> 大家快來看資工軒田大神的英姿吧~!!
 				</p>
 				<hr>
-				<ol>
+				<ol style="list-style-type: square;">
 					<li>趙傳 - 我是一隻小小鳥</li>
 					<li> The Beatles - Let It Be </li>
 					<li>周杰倫 - 蝸牛</li>
@@ -308,7 +308,7 @@
 					<br> 歷劫資結沙場的大三貝斯手(黃士弘)跨屆團---資結●夢醒時分，教授將悄悄喚醒，醉生夢死的肝臟們！
 				</p>
 				<hr>
-				<ol>
+				<ol style="list-style-type: square;">
 					<li> 張學友 - 吻別 </li>
 					<li>五月天 - 好不好</li>
 					<li> 伍百 - 夢醒時分</li>
@@ -371,7 +371,7 @@
                                         <br>
                                         <p>
                                                 <hr>
-                                                <ol>
+                                                <ol style="list-style-type: square;">
                                                         <li>Toto - King of the world</li>
                                                         <li> 汪峰- 春天裡</li>
                                                         <li>FTIsland - Black chocolate</li>
@@ -418,7 +418,7 @@
 					<br>
 				</p>
 				<hr>
-				<ol>
+				<ol style="list-style-type: square;">
 					<li>Mr.Big - Shine </li>
 					<li>Oasis - Stop Crying Your Heart Out</li>
 					<li>Birdy - Wings </li>
@@ -448,7 +448,7 @@
 					<br>
 				</p>
 				<hr>
-				<ol>
+				<ol style="list-style-type: square;">
 					<li> 滅火器 - 海上的人</li>
 					<li> John Mayer - Slow Dancing in a Burning Room</li>
 					<li> io - 真實</li>
@@ -482,7 +482,7 @@
                                         <br>
                                 </p>
                                 <hr>
-                                <ol>
+                                <ol style="list-style-type: square;">
                                         <li>HE有激人 - 超級白</li>
                                         <li>楊乃文 - 我給的愛 </li>
                                         <li>Phil Collins - Easy Lover</li>
@@ -514,7 +514,7 @@
 					<br>
 				</p>
 				<hr>
-				<ol>
+				<ol style="list-style-type: square;">
 					<li>pinkzebra - larger than life</li>
 					<li>one ok rock - be the light </li>
 					<li>coldplay - viva la vida</li>
@@ -542,7 +542,7 @@
 					<br> Cause music directs. Cause music is our inner treasure. We are The Ins.
 				</p>
 				<hr>
-				<ol>
+				<ol style="list-style-type: square;">
 					<li>P!nk - Try</li>
 					<li>Rihanna - Diamonds </li>
 					<li>Avril Lavigne - Nobody's Home</li>
@@ -574,7 +574,7 @@
 					<br>
 				</p>
 				<hr>
-				<ol>
+				<ol style="list-style-type: square;">
 					<li>自創 - Black Waltz </li>
 					<li>Maybeshewill - co-conspirators </li>
 					<li>自創 - 歧角</li>
@@ -584,6 +584,7 @@
 		</div>
 		
 		<div class="container-fluid" id="voting-arena">
+                        <h1>投票區</h1>
                         <img class="img-responsive" src="https://docs.google.com/spreadsheets/d/14YepbyheWTZTKtr7uXiePPuJe0d1EjcdIP78tj2Hq2Y/pubchart?oid=1472798053&format=image">
 			<!--<iframe class="embed-responsive-item" width="643" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/14YepbyheWTZTKtr7uXiePPuJe0d1EjcdIP78tj2Hq2Y/pubchart?oid=1472798053&amp;format=interactive"></iframe>-->
 			<a class="btn btn-default" href="http://goo.gl/forms/InI17csSIo" target="_blank">點我投票</a>
