--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                                         </li>
                                         <li><a href="#agenda">節目單</a>
                                         </li>-->
+                                        <li><a href="#voting-arena">投票區</a></li>
 					<li class="dropdown">
 						<a href="#bands" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">樂團列表 <span class="caret"></span></a>
 						<ul class="dropdown-menu dropdown-menu-right">
