prettymuch a nice try for the banner

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-static-top" role="navigation">
+<!--	<nav class="navbar navbar-static-top" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -54,7 +54,7 @@
 					<!--<li><a href="#about">活動介紹</a>
 										</li>
 										<li><a href="#agenda">節目單</a>
-										</li>-->
+										</li>
 										<li><a href="#voting-arena">投票區</a></li>
 					<li class="dropdown">
 						<a href="#bands" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">樂團列表 <span class="caret"></span></a>
@@ -89,13 +89,11 @@
 					</li>
 				</ul>
 			</div>
-			<!-- /.nav-collapse -->
 		</div>
-	</nav>
-	<div class="container-fluid">
-		  <img src="./img/banner.png" class="img-responsive" style="display: block;margin-left: auto;margin-right: auto;">
-		</div>
-	
+	</nav>-->
+	<div class="container-fluid" id ="banner">
+		<img src="./img/banner.png" class="img-responsive" style="display: block;margin-left: auto;margin-right: auto;">
+	</div>
 	<div class="container" id="agenda"> 
 		<h1>演出</h1>
 		<h3><a href="#band1"><img src="./img/band_pic/handsome_ni.jpg" height="60" width="60" class="img-circle"></a> <span style="color:#ffffff">英俊泥</span> <small>feat. 電機二：張聖農 電機二：游理聿 土木二：張家睿 機械二：胡哲儒 土木三：陳正澔 牙醫二：高開元</small></h3>
