--- a/index.html
+++ b/index.html
@@ -588,9 +588,9 @@
 			<a class="btn btn-default" href="http://goo.gl/forms/InI17csSIo" target="_blank">點我投票</a>
 		</div>
 		<!--let the belows be below-->
-		<div class="container-fluid" id="">
+		<!--<div class="container-fluid" id="">
 				  <a href="#" class="btn back-to-top"><h4><img src="./img/cd-top-arrow.svg">Top</h4></a>
-				</div>
+				</div>-->
 </body>
 
 </html>
